fix image on mobile and filter z-level

--- a/frontend/src/pages/styles/filterclimbs.css
+++ b/frontend/src/pages/styles/filterclimbs.css
@@ -10,6 +10,7 @@
     border: 3px solid black;
     border-radius: 16px;
     padding: 16px;
+    z-index:10;
 }
 
 .filter {
